src/main/jkube/service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9779"
    prometheus.io/path: "/metrics"
  labels:
    expose: "true"
    app: camel-quarkus-openapi
  name: camel-quarkus-openapi
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: prometheus
    port: 9779
    protocol: TCP
    targetPort: 9779
  selector:
    app: camel-quarkus-openapi
